# telegram-messages-dump

./: README.md  pyproject.toml  setup.py
telegram_messages_dump/: __init__.py  chat_dump_metadata.py  chat_dump_settings.py  run.py  telegram_dumper.py
